--- a/lib/l10n/arb/app_es.arb
+++ b/lib/l10n/arb/app_es.arb
@@ -1,7 +1,7 @@
 {
     "@@locale": "es",
-    "counterAppBarTitle": "Contador",
-    "@counterAppBarTitle": {
-        "description": "Texto mostrado en la AppBar de la página del contador"
+    "appsAppBarTitle": "Aplicaciones instaladas",
+    "@appsAppBarTitle": {
+        "description": "Texto mostrado en la AppBar de la página de aplicaciones"
     }
 }
